--- a/Proyecto-Tienda/src/css/card.css
+++ b/Proyecto-Tienda/src/css/card.css
@@ -6,3 +6,18 @@
     margin-top: 1.5%;
     gap: 10px;
 }
+
+.productos2{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    display: flex;
+    align-content: space-between;
+    list-style-type: none;  
+    margin-top: 1.5%;
+    gap: 50px;
+}
+
+h4{
+    font-Family : Sterling ;
+    text-Align : center ;
+}
